--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@supabase/supabase-js": "^2.45.6",
     "debounce": "^2.2.0",
     "moment": "^2.30.1",
-    "next": "15.0.1",
+    "next": "^15.2.0-canary.65",
     "prisma": "^5.21.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
